# rustynum

./: .gitignore  404.html  CNAME  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  sitemap.xml
.github/workflows/: build_wheels.yml  test_python_bindings.yml
api/: index.html
bindings/python/: Cargo.toml  pyproject.toml  setup.py
bindings/python/benchmarks/: test_performance_addition.py  test_performance_array_ops.py  test_performance_basics.py  test_performance_dot.py  test_performance_gemm.py  test_performance_gemv.py  test_performance_mean.py  test_performance_mean_nd.py  test_performance_median.py  test_performance_median_nd.py  test_performance_min.py  test_performance_norm.py
bindings/python/rustynum/: __init__.py  functions.py  num_array_class.py
bindings/python/src/: array_f32.rs  array_f64.rs  array_u8.rs  functions.rs  lib.rs
bindings/python/tests/: test_array_ops.py  test_basics.py  test_complex_flows.py  test_dot_product.py  test_matrix_multiplication.py  test_mean.py  test_median.py  test_min_max.py  test_norm.py
blog/: index.html
docs/: index.md  installation.md  quick-start.md
docs/api/: index.md
docs/assets/js/: analytics.js
docs/tutorials/: better-matrix-operations.md  index.md  replacing-numpy-for-faster-analytics.md  streamlining-machine-learning-preprocessing.md
installation/: index.html
quick-start/: index.html
rustynum-rs/: Cargo.toml
rustynum-rs/benches/: array_benchmarks.rs
rustynum-rs/src/: lib.rs  num_array.rs  traits.rs
rustynum-rs/src/helpers/: parallel.rs
rustynum-rs/src/num_array/: array_struct.rs  constructors.rs  impl_clone_from.rs  linalg.rs  manipulation.rs  mod.rs  num_array.rs  operations.rs  statistics.rs
rustynum-rs/src/simd_ops/: mod.rs
rustynum-rs/tests/: integration_tests.rs
search/: search_index.json
tutorials/: index.html
tutorials/better-matrix-operations/: index.html
tutorials/replacing-numpy-for-faster-analytics/: index.html
tutorials/streamlining-machine-learning-preprocessing/: index.html
