[package]
name = "rustynum"
version = "0.1.0"
edition = "2021"

[lib]
name = "_rustynum"
crate-type = ["cdylib"]


[dependencies]
numpy = "0.19.0"
pyo3 = { version = "0.19.2", features = ["extension-module"] }

# Adjust the path to point to your rustynum-rs crate relative to the bindings/python directory
rustynum-rs = { path = "../../rustynum-rs" }
